Revamped the options page with nice stuff, and now displaying it at each update w/ a changelog+ "new!" indication

--- a/source/fancy-settings/source/index.html
+++ b/source/fancy-settings/source/index.html
@@ -29,6 +29,19 @@
         <script src="settings.js"></script>
     </head>
     <body class="no-select">
+        <div class="hidden-changelog">
+        <p>You updated Better TweetDeck to the <b>1.0.0</b> version ! Look down to see new features !</p>
+        <b>Changelog</b>:
+            <ul>
+                <li>Added CloudApp support for previews</li>
+                <li>Added 500px support for previews</li>
+                <li>Added Flickr support for previews</li>
+                <li>Added Instagram support for previews</li>
+                <li>Added full Imgur support for previews</li>
+                <li>Added the possibility of choosing the services to display or not</li>
+                <li>Added possibility not to hide the play button on YouTube thumbnails</li>
+            </ul>
+        </div>
         <div id="sidebar" class="fancy">
             <img id="icon" src="" alt=""><h1 id="settings-label"></h1>
             <div id="tab-container">
