Added a "Welcome" screen + re-ordered the options on the Options page

--- a/source/fancy-settings/source/index.html
+++ b/source/fancy-settings/source/index.html
@@ -42,6 +42,9 @@
                 <li>Added possibility not to hide the play button on YouTube thumbnails</li>
             </ul>
         </div>
+        <div class="hidden-welcome">
+            Thank you for installing Better TweetDeck ! Here is the options page, some of these options are enabled by default but feel free to customize them to fit your needs !
+        </div>
         <div id="sidebar" class="fancy">
             <img id="icon" src="" alt=""><h1 id="settings-label"></h1>
             <div id="tab-container">
