--- a/source/fancy-settings/source/index.html
+++ b/source/fancy-settings/source/index.html
@@ -30,9 +30,14 @@
     </head>
     <body class="no-select">
         <div class="hidden-changelog">
-        <p>You updated Better TweetDeck to the <b>1.0.0</b> version ! Look down to see new features !</p>
+        <p>You updated Better TweetDeck to the <b>1.0.2</b> version ! Look down to see new features !</p>
         <b>Changelog</b>:
             <ul>
+                <li>Large previews now fit perfectly with the Twitter ones</li>
+                <li>Added a &#8220;Welcome&#8221; screen</li>
+                <li>Re-ordered options</li>
+                <li>Improved options page, now displaying it at each update with a changelog</li>
+                <li>Added Tumblr support for previews</li>
                 <li>Added CloudApp support for previews</li>
                 <li>Added 500px support for previews</li>
                 <li>Added Flickr support for previews</li>
