--- a/source/fancy-settings/source/index.html
+++ b/source/fancy-settings/source/index.html
@@ -30,7 +30,7 @@
     </head>
     <body class="no-select">
         <div class="hidden-changelog">
-        <p>You updated Better TweetDeck to the <b>1.0.2</b> version ! Look down to see new features !</p>
+        <p>You updated Better TweetDeck to the <b></b> version ! Look down to see new features !</p>
         <b>Changelog</b>:
             <ul>
                 <li>Large previews now fit perfectly with the Twitter ones</li>
