--- a/source/fancy-settings/source/index.html
+++ b/source/fancy-settings/source/index.html
@@ -45,6 +45,8 @@
                 <li>Added full Imgur support for previews</li>
                 <li>Added the possibility of choosing the services to display or not</li>
                 <li>Added possibility not to hide the play button on YouTube thumbnails</li>
+                <li>Fixed a bug where suffixes were mixed between providers, resulting in failed thumbnails</li>
+                <li>Fixed a bug where URL could get "lost" between AJAX calls, resulting in failed links</li>
             </ul>
         </div>
         <div class="hidden-welcome">
