--- a/source/fancy-settings/source/index.html
+++ b/source/fancy-settings/source/index.html
@@ -33,20 +33,21 @@
         <p>You updated Better TweetDeck to the <b></b> version ! Look down to see new features !</p>
         <b>Changelog</b>:
             <ul>
-                <li>Large previews now fit perfectly with the Twitter ones</li>
-                <li>Added a &#8220;Welcome&#8221; screen</li>
-                <li>Re-ordered options</li>
-                <li>Improved options page, now displaying it at each update with a changelog</li>
-                <li>Added Tumblr support for previews</li>
-                <li>Added CloudApp support for previews</li>
-                <li>Added 500px support for previews</li>
-                <li>Added Flickr support for previews</li>
-                <li>Added Instagram support for previews</li>
-                <li>Added full Imgur support for previews</li>
-                <li>Added the possibility of choosing the services to display or not</li>
-                <li>Added possibility not to hide the play button on YouTube thumbnails</li>
-                <li>Fixed a bug where suffixes were mixed between providers, resulting in failed thumbnails</li>
-                <li>Fixed a bug where URL could get "lost" between AJAX calls, resulting in failed links</li>
+                <li><b>Feature: </b>Large previews now fit perfectly with the Twitter ones</li>
+                <li><b>Feature: </b>Added a &#8220;Welcome&#8221; screen</li>
+                <li><b>Feature: </b>Re-ordered options</li>
+                <li><b>Feature: </b>Improved options page, now displaying it at each update with a changelog</li>
+                <li><b>Feature: </b>Added Tumblr support for previews</li>
+                <li><b>Feature: </b>Added CloudApp support for previews</li>
+                <li><b>Feature: </b>Added 500px support for previews</li>
+                <li><b>Feature: </b>Added Flickr support for previews</li>
+                <li><b>Feature: </b>Added Instagram support for previews</li>
+                <li><b>Feature: </b>Added full Imgur support for previews</li>
+                <li><b>Feature: </b>Added the possibility of choosing the services to display or not</li>
+                <li><b>Bugfix: </b>Added possibility not to hide the play button on YouTube thumbnails</li>
+                <li><b>Bugfix: </b>Fixed a bug where suffixes were mixed between providers, resulting in failed thumbnails</li>
+                <li><b>Bugfix: </b>Fixed a bug where URL could get "lost" between AJAX calls, resulting in failed links</li>
+                <li><b>Bugfix: </b>Fixed a bug where imgur.com/gallery/ links where mistakenly considered as album</li>
             </ul>
         </div>
         <div class="hidden-welcome">
