--- a/source/fancy-settings/source/index.html
+++ b/source/fancy-settings/source/index.html
@@ -48,6 +48,7 @@
                 <li><b>Bugfix: </b>Fixed a bug where suffixes were mixed between providers, resulting in failed thumbnails</li>
                 <li><b>Bugfix: </b>Fixed a bug where URL could get "lost" between AJAX calls, resulting in failed links</li>
                 <li><b>Bugfix: </b>Fixed a bug where imgur.com/gallery/ links where mistakenly considered as album</li>
+                <li><b>BugFix: </b>Fixed a weird bug with the "inverted" name display mode</li>
             </ul>
         </div>
         <div class="hidden-welcome">
