--- a/source/fancy-settings/source/index.html
+++ b/source/fancy-settings/source/index.html
@@ -31,24 +31,13 @@
     <body class="no-select">
         <div class="hidden-changelog">
         <p>You updated Better TweetDeck to the <b></b> version! Look down to see new features!</p>
-        <b>Changelog</b>:
+        <b>Changelog for <u>1.1.x</u></b>:
             <ul>
-                <li><b>Feature: </b>Large previews now fit perfectly with the Twitter ones</li>
-                <li><b>Feature: </b>Added a &#8220;Welcome&#8221; screen</li>
-                <li><b>Feature: </b>Re-ordered options</li>
-                <li><b>Feature: </b>Improved options page, now displaying it at each update with a changelog</li>
-                <li><b>Feature: </b>Added Tumblr support for previews</li>
-                <li><b>Feature: </b>Added CloudApp support for previews</li>
-                <li><b>Feature: </b>Added 500px support for previews</li>
-                <li><b>Feature: </b>Added Flickr support for previews</li>
-                <li><b>Feature: </b>Added Instagram support for previews</li>
-                <li><b>Feature: </b>Added full Imgur support for previews</li>
-                <li><b>Feature: </b>Added the possibility of choosing the services to display or not</li>
-                <li><b>Bugfix: </b>Added possibility not to hide the play button on YouTube thumbnails</li>
-                <li><b>Bugfix: </b>Fixed a bug where suffixes were mixed between providers, resulting in failed thumbnails</li>
-                <li><b>Bugfix: </b>Fixed a bug where URL could get "lost" between AJAX calls, resulting in failed links</li>
-                <li><b>Bugfix: </b>Fixed a bug where imgur.com/gallery/ links where mistakenly considered as album</li>
-                <li><b>BugFix: </b>Fixed a weird bug with the "inverted" name display mode</li>
+                <li><b>Feature: </b>Thumbnail size is now controlled by the settings defined in the containing column. TL;DR, thumbnails size can be modified within TweetDeck!</li>
+                <li><b>Bugfix: </b>Image services are now in alphabetical order in settings</li>
+                <li><b>Bugfix: </b>Large previews got a triangle like the Twitter's ones! #Illuminati</li>
+                <li><b>Bugfix: </b>Fixed a bug with Imgur IDs, sometimes, it wasn't parsed properly, that shouldn't happen anymore</li>
+                <li><b>Bugfix: </b>Fixed <u>for real</u> the "inverted" name display mode.</li>
             </ul>
         </div>
         <div class="hidden-welcome">
