--- a/source/fancy-settings/source/index.html
+++ b/source/fancy-settings/source/index.html
@@ -34,6 +34,7 @@
         <b>Changelog for <u>1.1.x</u></b>:
             <ul>
                 <li><b>Feature: </b>Thumbnail size is now controlled by the settings defined in the containing column. TL;DR, thumbnails size can be modified within TweetDeck!</li>
+                <li><b>Bugfix: </b>Fixed the font-weight of usernames when using the "inverted" naming display (in Notifications columns)</li>
                 <li><b>Bugfix: </b>Image services are now in alphabetical order in settings</li>
                 <li><b>Bugfix: </b>Large previews got a triangle like the Twitter's ones! #Illuminati</li>
                 <li><b>Bugfix: </b>Fixed a bug with Imgur IDs, sometimes, it wasn't parsed properly, that shouldn't happen anymore</li>
