Added feature in changelog

--- a/source/fancy-settings/source/index.html
+++ b/source/fancy-settings/source/index.html
@@ -32,7 +32,8 @@
         <div class="hidden-changelog">
         <p>You updated Better TweetDeck to the <b></b> version! Look down to see new features!</p>
         <b>Changelog for <u>1.1.x</u></b>:
-            <ul>
+            <ul>    
+                <li><b>Feature: </b>Now you can choose to display only one thumbnail per tweet</li>
                 <li><b>Feature: </b>Thumbnail size is now controlled by the settings defined in the containing column. TL;DR, thumbnails size can be modified within TweetDeck!</li>
                 <li><b>Bugfix: </b>Fixed the font-weight of usernames when using the "inverted" naming display (in Notifications columns)</li>
                 <li><b>Bugfix: </b>Image services are now in alphabetical order in settings</li>
