--- a/source/fancy-settings/source/index.html
+++ b/source/fancy-settings/source/index.html
@@ -35,6 +35,7 @@
             <ul>    
                 <li><b>Feature: </b>Now you can choose to display only one thumbnail per tweet</li>
                 <li><b>Feature: </b>Thumbnail size is now controlled by the settings defined in the containing column. TL;DR, thumbnails size can be modified within TweetDeck!</li>
+                <li><b>Bugfix: </b>Fixed a bug where RT-boxes of TweetDeck are toi wide</li>
                 <li><b>Bugfix: </b>Fixed the font-weight of usernames when using the "inverted" naming display (in Notifications columns)</li>
                 <li><b>Bugfix: </b>Image services are now in alphabetical order in settings</li>
                 <li><b>Bugfix: </b>Large previews got a triangle like the Twitter's ones! #Illuminati</li>
