--- a/source/fancy-settings/source/index.html
+++ b/source/fancy-settings/source/index.html
@@ -31,21 +31,16 @@
     <body class="no-select">
         <div class="hidden-changelog">
         <p>You updated Better TweetDeck to the <b></b> version! Look down to see new features!</p>
-        <b>Changelog for <u>1.1.x</u></b>:
+        <b>Changelog for <u>1.2.x</u></b>:
             <ul>    
-                <li><b>Feature: </b>Now you can choose to display only one thumbnail per tweet</li>
-                <li><b>Feature: </b>Thumbnail size is now controlled by the settings defined in the containing column. TL;DR, thumbnails size can be modified within TweetDeck!</li>
-                <li><b>Bugfix: </b>Improved the whole "get user media preview size" mechanism so it's faster</li>
-                <li><b>Bugfix: </b>Fixed a bug where RT-boxes of TweetDeck are too wide</li>
-                <li><b>Bugfix: </b>Fixed the font-weight of usernames when using the "inverted" naming display (in Notifications columns)</li>
-                <li><b>Bugfix: </b>Image services are now in alphabetical order in settings</li>
-                <li><b>Bugfix: </b>Large previews got a triangle like the Twitter's ones! #Illuminati</li>
-                <li><b>Bugfix: </b>Fixed a bug with Imgur IDs, sometimes, it wasn't parsed properly, that shouldn't happen anymore</li>
-                <li><b>Bugfix: </b>Fixed <u>for real</u> the "inverted" name display mode.</li>
+                <li><b>Feature: </b>Vimeo, Dailymotion and full Instagram thumbnails support</li>
+                <li><b>Feature: </b>Added support for lightboxes with 500px, CloudApp, Droplr, Dailymotion, Flickr, Imgur, Instagram and Vimeo</li>
+                <li><b>Bugfix:</b>The extension should now fetch correctly Imgur galleries and albums</li>
+                <li><b>Bugfix: </b>The extension should now output less errors in the console. At least no more "useless" errors. I'm not responsible for the TweetDeck's ones of course.</li>
             </ul>
         </div>
         <div class="hidden-welcome">
-            Thank you for installing Better TweetDeck! Here is the options page, some of these options are enabled by default but feel free to customize them to fit your needs!
+            Thank you for helping me in the beta of TweetDeck!
         </div>
         <div id="sidebar" class="fancy">
             <img id="icon" src="" alt=""><h1 id="settings-label"></h1>
