--- a/source/fancy-settings/source/index.html
+++ b/source/fancy-settings/source/index.html
@@ -32,7 +32,8 @@
         <div class="hidden-changelog">
         <p>You updated Better TweetDeck to the <b></b> version! Look down to see new features!</p>
         <b>Changelog for <u>1.2.x</u></b>:
-            <ul>    
+            <ul>
+                <li><b>Feature: </b>The changelog displays only if the extension got a 1.x.y type update (i.e, if you update from 1.1.x to 1.2.x you will get the changelog to pop-out, otherwise, you won't)</li>
                 <li><b>Feature: </b>Vimeo, Dailymotion and full Instagram thumbnails support</li>
                 <li><b>Feature: </b>Added support for lightboxes with 500px, CloudApp, Droplr, Dailymotion, Flickr, Imgur, Instagram and Vimeo</li>
                 <li><b>Bugfix:</b>The extension should now fetch correctly Imgur galleries and albums</li>
@@ -40,7 +41,7 @@
             </ul>
         </div>
         <div class="hidden-welcome">
-            Thank you for helping me in the beta of TweetDeck!
+            Thank you for using BetterTweetDeck!
         </div>
         <div id="sidebar" class="fancy">
             <img id="icon" src="" alt=""><h1 id="settings-label"></h1>
