Updated changelog and screenshots

--- a/source/fancy-settings/source/index.html
+++ b/source/fancy-settings/source/index.html
@@ -33,6 +33,7 @@
         <p>You updated Better TweetDeck to the <b></b> version! Look down to see new features!</p>
         <b>Changelog for <u>1.2.x</u></b>:
             <ul>
+                <li><b>Feature: </b>Thumbnails are back in the profiles modal windows. I might add an option if necessary</li>
                 <li><b>Feature: </b>The changelog displays only if the extension got a 1.x.y type update (i.e, if you update from 1.1.x to 1.2.x you will get the changelog to pop-out, otherwise, you won't)</li>
                 <li><b>Feature: </b>Vimeo, Dailymotion and full Instagram thumbnails support</li>
                 <li><b>Feature: </b>Added support for lightboxes with 500px, CloudApp, Droplr, Dailymotion, Flickr, Imgur, Instagram and Vimeo</li>
