--- a/source/fancy-settings/source/index.html
+++ b/source/fancy-settings/source/index.html
@@ -39,6 +39,10 @@
                 <li><b>Feature: </b>Added support for lightboxes with 500px, CloudApp, Droplr, Dailymotion, Flickr, Imgur, Instagram and Vimeo</li>
                 <li><b>Bugfix:</b>The extension should now fetch correctly Imgur galleries and albums</li>
                 <li><b>Bugfix: </b>The extension should now output less errors in the console. At least no more "useless" errors. I'm not responsible for the TweetDeck's ones of course.</li>
+                <li><b>Bugfix: </b> Dailymotion embeds shouldn't cause HTTPS problems anymore</li>
+                <li><b>Bugfix: </b> Tweets shouldn't have more than one thumbnail at once anymore</li>
+                <li><b>Bugfix: </b> Instagram videos in lightboxes should fit in the modal window now</li>
+                <li><b>Bugfix: </b> Tumblr previews should be more accurate</li>
             </ul>
         </div>
         <div class="hidden-welcome">
