[Improvement] Moved the "Thank" section on the main screen of settings.

--- a/source/fancy-settings/source/index.html
+++ b/source/fancy-settings/source/index.html
@@ -46,7 +46,12 @@
             </ul>
         </div>
         <div class="hidden-welcome">
-            Thank you for using BetterTweetDeck!
+            <p>Thank you for using BetterTweetDeck! You can check the source code of the app, follow me on Twitter for updates or help me in developping the extension by donating a few bucks! Thank you!</p>
+            <ul>
+                <li><a href="http://github.com/eramdam/BetterTweetDeck">BetterTweetDeck on GitHub</a></li>
+                <li><a href="http://twitter.com/Eramdam">@Eramdam on Twitter</a></li>
+                <li><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=RRY2KKZLNBJDG">Donate on PayPal</a></li>
+            </ul>
         </div>
         <div id="sidebar" class="fancy">
             <img id="icon" src="" alt=""><h1 id="settings-label"></h1>
