--- a/source/fancy-settings/source/index.html
+++ b/source/fancy-settings/source/index.html
@@ -46,7 +46,7 @@
             </ul>
         </div>
         <div class="hidden-welcome">
-            <p>Thank you for using BetterTweetDeck! You can check the source code of the app, follow me on Twitter for updates or help me in developping the extension by donating a few bucks! Thank you!</p>
+            <p>Thank you for using BetterTweetDeck! <br /> You can check the source code of the app, follow me on Twitter for updates or help me in developping the extension by donating a few bucks! Thank you!</p>
             <ul>
                 <li><a href="http://github.com/eramdam/BetterTweetDeck">BetterTweetDeck on GitHub</a></li>
                 <li><a href="http://twitter.com/Eramdam">@Eramdam on Twitter</a></li>
