[Feature] Added localization in settings. BAISE OUAIS LA RANCE.

--- a/source/fancy-settings/source/index.html
+++ b/source/fancy-settings/source/index.html
@@ -45,12 +45,20 @@
                 <li><b>Bugfix: </b> Tumblr previews should be more accurate</li>
             </ul>
         </div>
-        <div class="hidden-welcome">
+        <div class="hidden-welcome en">
             <p>Thank you for using BetterTweetDeck! <br /> You can check the source code of the app, follow me on Twitter for updates or help me in developping the extension by donating a few bucks! Thank you!</p>
             <ul>
                 <li><a href="http://github.com/eramdam/BetterTweetDeck">BetterTweetDeck on GitHub</a></li>
                 <li><a href="http://twitter.com/Eramdam">@Eramdam on Twitter</a></li>
                 <li><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=RRY2KKZLNBJDG">Donate on PayPal</a></li>
+            </ul>
+        </div>
+        <div class="hidden-welcome fr">
+            <p>Merci d'utiliser Better TweetDeck !<br /> Vous pouvez consulter le code source de l'extension, me suivre sur Twitter, ou m'aider à la développer en effectuant un don ! Merci beaucoup !</p>
+            <ul>
+                <li><a href="http://github.com/eramdam/BetterTweetDeck">BetterTweetDeck sur GitHub</a></li>
+                <li><a href="http://twitter.com/Eramdam">@Eramdam sur Twitter</a></li>
+                <li><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=RRY2KKZLNBJDG">Donner avec PayPal</a></li>
             </ul>
         </div>
         <div id="sidebar" class="fancy">
