[Meta] Changelog messages in Settings are now localized too

--- a/source/fancy-settings/source/index.html
+++ b/source/fancy-settings/source/index.html
@@ -29,21 +29,51 @@
         <script src="settings.js"></script>
     </head>
     <body class="no-select">
-        <div class="hidden-changelog">
+        <div class="hidden-changelog en">
         <p>You updated Better TweetDeck to the <b></b> version! Look down to see new features!</p>
         <b>Changelog for <u>1.2.x</u></b>:
-            <ul>
-                <li><b>Feature: </b>Thumbnails are back in the profiles modal windows. I might add an option if necessary</li>
-                <li><b>Feature: </b>The changelog displays only if the extension got a 1.x.y type update (i.e, if you update from 1.1.x to 1.2.x you will get the changelog to pop-out, otherwise, you won't)</li>
-                <li><b>Feature: </b>Vimeo, Dailymotion and full Instagram thumbnails support</li>
-                <li><b>Feature: </b>Added support for lightboxes with 500px, CloudApp, Droplr, Dailymotion, Flickr, Imgur, Instagram and Vimeo</li>
-                <li><b>Bugfix:</b>The extension should now fetch correctly Imgur galleries and albums</li>
-                <li><b>Bugfix: </b>The extension should now output less errors in the console. At least no more "useless" errors. I'm not responsible for the TweetDeck's ones of course.</li>
-                <li><b>Bugfix: </b> Dailymotion embeds shouldn't cause HTTPS problems anymore</li>
-                <li><b>Bugfix: </b> Tweets shouldn't have more than one thumbnail at once anymore</li>
-                <li><b>Bugfix: </b> Instagram videos in lightboxes should fit in the modal window now</li>
-                <li><b>Bugfix: </b> Tumblr previews should be more accurate</li>
-            </ul>
+        <ul>
+        <li><strong>Features</strong>:
+
+        <ul>
+        <li>The Settings page has been restyled</li>
+        <li>The extension is now localized in French in addition to English</li>
+        <li>Added support of Dribbble, Moby.to, yFrog &amp; DeviantArt for thumbnails/lightboxes</li>
+        <li>Lightboxes and modal windows can get a new &#8220;full-screen&#8221; effect</li>
+        </ul></li>
+        <li><strong>Bugfixes &amp; Improvements</strong>:
+
+        <ul>
+        <li>Fixed an issue with HTTPS and Dailymotion video embeds</li>
+        <li>Fixed a duplicating thumbnails issue when a YouTube link and an Instagram one were in the same tweet</li>
+        <li>Improved the Tumblr mechanism for thumbnails</li>
+        <li>Removed thumbnails on Details view</li>
+        <li>Stability and performance improvements as minor bugfixes as well</li>
+        </ul></li>
+        </ul>
+        </div>
+        <div class="hidden-changelog fr">
+        <p>Better TweetDeck a été mis à jour en version <b></b> ! Voici les changements apportés !</p>
+        <b>Liste de changement pour les versions <u>1.3.0 et plus</u></b>:
+        <ul>
+        <li><strong>Fonctionnalités</strong>:
+
+        <ul>
+        <li>La page de réglages a été ré-arrangée</li>
+        <li>L'extension est maintenant traduite en français !</li>
+        <li>Le support de Dribbble, DeviantArt, Moby.to et yFrog a été ajouté pour les miniatures et aperçus</li>
+        <li>Les aperçus en plein écran et les fenêtres modales peuvent bénéficier d'un nouvel effet "plein écran"</li>
+        </ul></li>
+        <li><strong>Correction de bugs &amp; améliorations</strong>:
+
+        <ul>
+        <li>Correction d'un problème avec le HTTPS sur les vidéos Dailymotion</li>
+        <li>Correction d'un problème de duplication de miniatures avec YouTube + Instagram</li>
+        <li>Les miniatures Tumblr devraient être plus précisément choisies</li>
+        <li>Suppression des miniatures sur les vues détaillées des tweets</li>
+        <li>Améliorations des performances et corrections de bug mineurs</li>
+        </ul></li>
+        </ul>
         </div>
         <div class="hidden-welcome en">
             <p>Thank you for using BetterTweetDeck! <br /> You can check the source code of the app, follow me on Twitter for updates or help me in developping the extension by donating a few bucks! Thank you!</p>
