[Improvement] BTC address now links to the blockchain page

--- a/source/fancy-settings/source/index.html
+++ b/source/fancy-settings/source/index.html
@@ -81,7 +81,7 @@
                 <li><a href="http://github.com/eramdam/BetterTweetDeck">BetterTweetDeck on GitHub</a></li>
                 <li><a href="http://twitter.com/Eramdam">@Eramdam on Twitter</a></li>
                 <li><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=RRY2KKZLNBJDG">Donate on PayPal</a></li>
-                <li><strong>BTC</strong>: 16aWencNCFBtAqnKHj966uSqzQ66RYA87r</li>
+                <li><strong>BTC</strong>: <a href="https://blockchain.info/address/16aWencNCFBtAqnKHj966uSqzQ66RYA87r">16aWencNCFBtAqnKHj966uSqzQ66RYA87r</a></li>
             </ul>
         </div>
         <div class="hidden-welcome fr">
@@ -90,7 +90,7 @@
                 <li><a href="http://github.com/eramdam/BetterTweetDeck">BetterTweetDeck sur GitHub</a></li>
                 <li><a href="http://twitter.com/Eramdam">@Eramdam sur Twitter</a></li>
                 <li><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=RRY2KKZLNBJDG">Donner avec PayPal</a></li>
-                <li><strong>BTC</strong> : 16aWencNCFBtAqnKHj966uSqzQ66RYA87r</li>
+                <li><strong>BTC</strong> : <a href="https://blockchain.info/address/16aWencNCFBtAqnKHj966uSqzQ66RYA87r">16aWencNCFBtAqnKHj966uSqzQ66RYA87r</a></li>
             </ul>
         </div>
         <div id="sidebar" class="fancy">
