[Meta] Updated changelog & manifest.json

--- a/source/fancy-settings/source/index.html
+++ b/source/fancy-settings/source/index.html
@@ -31,7 +31,7 @@
     <body class="no-select">
         <div class="hidden-changelog en">
         <p>You updated Better TweetDeck to the <b></b> version! Look down to see new features!</p>
-        <b>Changelog for <u>1.2.x</u></b>:
+        <b>Changelog for <u>1.3.x</u></b>:
         <ul>
         <li><strong>Features</strong>:
 
@@ -44,6 +44,7 @@
         <li><strong>Bugfixes &amp; Improvements</strong>:
 
         <ul>
+        <li>Lightboxes can now be closed with the Escape key</li>
         <li>Fixed an issue with HTTPS and Dailymotion video embeds</li>
         <li>Fixed a duplicating thumbnails issue when a YouTube link and an Instagram one were in the same tweet</li>
         <li>Improved the Tumblr mechanism for thumbnails</li>
@@ -67,6 +68,7 @@
         <li><strong>Correction de bugs &amp; améliorations</strong>:
 
         <ul>
+        <li>Les aperçus plein écran peuvent être fermés avec la touche Échap</li>
         <li>Correction d'un problème avec le HTTPS sur les vidéos Dailymotion</li>
         <li>Correction d'un problème de duplication de miniatures avec YouTube + Instagram</li>
         <li>Les miniatures Tumblr devraient être plus précisément choisies</li>
