[Meta] Updated NEWS, changelog and manifest.json for 1.3.3

--- a/source/fancy-settings/source/index.html
+++ b/source/fancy-settings/source/index.html
@@ -44,6 +44,7 @@
         <li><strong>Bugfixes &amp; Improvements</strong>:
 
         <ul>
+        <li>Lightboxes got functional tweet actions buttons now!</li>
         <li>Lightboxes can now be closed with the Escape key</li>
         <li>Fixed an issue with HTTPS and Dailymotion video embeds</li>
         <li>Fixed a duplicating thumbnails issue when a YouTube link and an Instagram one were in the same tweet</li>
@@ -68,6 +69,7 @@
         <li><strong>Correction de bugs &amp; améliorations</strong>:
 
         <ul>
+        <li>Les boutons présents dans les aperçus plein écran fonctionnent pleinement désormais !</li>
         <li>Les aperçus plein écran peuvent être fermés avec la touche Échap</li>
         <li>Correction d'un problème avec le HTTPS sur les vidéos Dailymotion</li>
         <li>Correction d'un problème de duplication de miniatures avec YouTube + Instagram</li>
