[Meta] Started updating the changelog withing options for 1.4

--- a/source/fancy-settings/source/index.html
+++ b/source/fancy-settings/source/index.html
@@ -61,6 +61,7 @@
         <li><strong>Fonctionnalités</strong>:
 
         <ul>
+        <li>Les emojis de Twitter sont désormais supportés ! <img src="https://abs.twimg.com/emoji/v1/72x72/1f389.png" class="twitter-emoji"> <img src="https://abs.twimg.com/emoji/v1/72x72/1f61c.png" class="twitter-emoji"> <img src="https://abs.twimg.com/emoji/v1/72x72/1f46f.png" class="twitter-emoji"> <img src="https://abs.twimg.com/emoji/v1/72x72/1f37b.png" class="twitter-emoji"> <img src="https://abs.twimg.com/emoji/v1/72x72/1f388.png" class="twitter-emoji"> <img src="https://abs.twimg.com/emoji/v1/72x72/1f3a4.png" class="twitter-emoji"> <img src="https://abs.twimg.com/emoji/v1/72x72/1f3ae.png" class="twitter-emoji"> <img src="https://abs.twimg.com/emoji/v1/72x72/1f680.png" class="twitter-emoji"> <img src="https://abs.twimg.com/emoji/v1/72x72/1f309.png" class="twitter-emoji"> <img src="https://abs.twimg.com/emoji/v1/72x72/2728.png" class="twitter-emoji"></li>
         <li>La page de réglages a été ré-arrangée</li>
         <li>L'extension est maintenant traduite en français !</li>
         <li>Le support de Dribbble, DeviantArt, Moby.to et yFrog a été ajouté pour les miniatures et aperçus</li>
