[Meta] Updated changelog

--- a/source/fancy-settings/source/index.html
+++ b/source/fancy-settings/source/index.html
@@ -36,6 +36,8 @@
         <li><strong>Features</strong>:
 
         <ul>
+        <li><strong>1.4</strong> Emojis are now in the party! <img src="https://abs.twimg.com/emoji/v1/72x72/1f389.png" class="twitter-emoji"> <img src="https://abs.twimg.com/emoji/v1/72x72/1f61c.png" class="twitter-emoji"> </li>
+        <li><strong>1.4</strong> Added support of SoundCloud and Bandcamp for thumbnails/lightboxes</li>
         <li>The Settings page has been restyled</li>
         <li>The extension is now localized in French in addition to English</li>
         <li>Added support of Dribbble, Moby.to, yFrog &amp; DeviantArt for thumbnails/lightboxes</li>
@@ -61,7 +63,8 @@
         <li><strong>Fonctionnalités</strong>:
 
         <ul>
-        <li>Les emojis de Twitter sont désormais supportés ! <img src="https://abs.twimg.com/emoji/v1/72x72/1f389.png" class="twitter-emoji"> <img src="https://abs.twimg.com/emoji/v1/72x72/1f61c.png" class="twitter-emoji"> <img src="https://abs.twimg.com/emoji/v1/72x72/1f46f.png" class="twitter-emoji"> <img src="https://abs.twimg.com/emoji/v1/72x72/1f37b.png" class="twitter-emoji"> <img src="https://abs.twimg.com/emoji/v1/72x72/1f388.png" class="twitter-emoji"> <img src="https://abs.twimg.com/emoji/v1/72x72/1f3a4.png" class="twitter-emoji"> <img src="https://abs.twimg.com/emoji/v1/72x72/1f3ae.png" class="twitter-emoji"> <img src="https://abs.twimg.com/emoji/v1/72x72/1f680.png" class="twitter-emoji"> <img src="https://abs.twimg.com/emoji/v1/72x72/1f309.png" class="twitter-emoji"> <img src="https://abs.twimg.com/emoji/v1/72x72/2728.png" class="twitter-emoji"></li>
+        <li><strong>1.4</strong> Les emojis de Twitter sont désormais supportés ! <img src="https://abs.twimg.com/emoji/v1/72x72/1f389.png" class="twitter-emoji"> <img src="https://abs.twimg.com/emoji/v1/72x72/1f61c.png" class="twitter-emoji"> </li>
+        <li><strong>1.4</strong> Le support de SoundCloud et de Bandcamp a été ajouté pour les miniatures et aperçus</li>
         <li>La page de réglages a été ré-arrangée</li>
         <li>L'extension est maintenant traduite en français !</li>
         <li>Le support de Dribbble, DeviantArt, Moby.to et yFrog a été ajouté pour les miniatures et aperçus</li>
