--- a/source/background.html
+++ b/source/background.html
@@ -1,4 +1,4 @@
 <html>
 	<script type="text/javascript" src="fancy-settings/source/lib/store.js"></script>
-	<script type="text/javascript" src="background.js"></script>
+	<script type="text/javascript" src="js/background.js"></script>
 </html>
