--- a/source/fancy-settings/source/index.html
+++ b/source/fancy-settings/source/index.html
@@ -31,54 +31,44 @@
     <body class="no-select">
         <div class="hidden-changelog en">
         <p>You updated Better TweetDeck to the <b></b> version! Look down to see new features!</p>
-        <b>Changelog for <u>1.3.x</u></b>:
+        <b>Changelog for <u>1.4.x</u></b>:
         <ul>
         <li><strong>Features</strong>:
 
         <ul>
-        <li><strong>1.4</strong> Emojis are now in the party! <img src="https://abs.twimg.com/emoji/v1/72x72/1f389.png" class="twitter-emoji"> <img src="https://abs.twimg.com/emoji/v1/72x72/1f61c.png" class="twitter-emoji"> </li>
-        <li><strong>1.4</strong> Added support of SoundCloud and Bandcamp for thumbnails/lightboxes</li>
-        <li>The Settings page has been restyled</li>
-        <li>The extension is now localized in French in addition to English</li>
-        <li>Added support of Dribbble, Moby.to, yFrog &amp; DeviantArt for thumbnails/lightboxes</li>
-        <li>Lightboxes and modal windows can get a new &#8220;full-screen&#8221; effect</li>
+        <li>Thumbnails of <strong>any</strong> image link are now supported.</li>
+        <li>You can now add emojis in your tweets with the <strong>Emoji Panel</strong>! (In composition pane)</li>
+        <li>Emojis are now in the party! <img src="https://abs.twimg.com/emoji/v1/72x72/1f389.png" class="twitter-emoji"> <img src="https://abs.twimg.com/emoji/v1/72x72/1f61c.png" class="twitter-emoji"> </li>
+        <li>Added support of SoundCloud and Bandcamp for thumbnails/lightboxes</li>
         </ul></li>
         <li><strong>Bugfixes &amp; Improvements</strong>:
 
         <ul>
-        <li>Lightboxes got functional tweet actions buttons now!</li>
-        <li>Lightboxes can now be closed with the Escape key</li>
-        <li>Fixed an issue with HTTPS and Dailymotion video embeds</li>
-        <li>Fixed a duplicating thumbnails issue when a YouTube link and an Instagram one were in the same tweet</li>
-        <li>Improved the Tumblr mechanism for thumbnails</li>
-        <li>Removed thumbnails on Details view</li>
+        <li>Thumbnails should load faster as they are more accurate.</li>
+        <li>The whole extension should be more reliable and less error-prone.</li>
+        <li>Emojis are now (almost?) perfectly supported and shouldn't cause any problem.</li>
         <li>Stability and performance improvements as minor bugfixes as well</li>
         </ul></li>
         </ul>
         </div>
         <div class="hidden-changelog fr">
         <p>Better TweetDeck a été mis à jour en version <b></b> ! Voici les changements apportés !</p>
-        <b>Liste de changement pour les versions <u>1.3.0 et plus</u></b>:
+        <b>Liste de changement pour les versions <u>1.4.0 et plus</u></b>:
         <ul>
         <li><strong>Fonctionnalités</strong>:
 
         <ul>
-        <li><strong>1.4</strong> Les emojis de Twitter sont désormais supportés ! <img src="https://abs.twimg.com/emoji/v1/72x72/1f389.png" class="twitter-emoji"> <img src="https://abs.twimg.com/emoji/v1/72x72/1f61c.png" class="twitter-emoji"> </li>
-        <li><strong>1.4</strong> Le support de SoundCloud et de Bandcamp a été ajouté pour les miniatures et aperçus</li>
-        <li>La page de réglages a été ré-arrangée</li>
-        <li>L'extension est maintenant traduite en français !</li>
-        <li>Le support de Dribbble, DeviantArt, Moby.to et yFrog a été ajouté pour les miniatures et aperçus</li>
-        <li>Les aperçus en plein écran et les fenêtres modales peuvent bénéficier d'un nouvel effet "plein écran"</li>
+        <li>Les miniatures de <strong>n'importe quelle</strong> image sont désormais supportées.</li>
+        <li>Vous pouvez désormais ajouter des emojis dans vos tweets en cliquant sur le bouton "Emojis" dans le panneau de composition.</li>
+        <li>Les emojis de Twitter sont désormais supportés ! <img src="https://abs.twimg.com/emoji/v1/72x72/1f389.png" class="twitter-emoji"> <img src="https://abs.twimg.com/emoji/v1/72x72/1f61c.png" class="twitter-emoji"> </li>
+        <li>Le support de SoundCloud et de Bandcamp a été ajouté pour les miniatures et aperçus</li>
         </ul></li>
         <li><strong>Correction de bugs &amp; améliorations</strong>:
 
         <ul>
-        <li>Les boutons présents dans les aperçus plein écran fonctionnent pleinement désormais !</li>
-        <li>Les aperçus plein écran peuvent être fermés avec la touche Échap</li>
-        <li>Correction d'un problème avec le HTTPS sur les vidéos Dailymotion</li>
-        <li>Correction d'un problème de duplication de miniatures avec YouTube + Instagram</li>
-        <li>Les miniatures Tumblr devraient être plus précisément choisies</li>
-        <li>Suppression des miniatures sur les vues détaillées des tweets</li>
+        <li>Les miniatures devraient charger plus rapidement et être plus précises.</li>
+        <li>L'extension devrait générer moins d'erreurs.</li>
+        <li>Les emojis sont désormais supportés (presque?) parfaitement.</li>
         <li>Améliorations des performances et corrections de bug mineurs</li>
         </ul></li>
         </ul>
