[Meta] Updated README/NEWS/changelog for Dropbox

--- a/source/fancy-settings/source/index.html
+++ b/source/fancy-settings/source/index.html
@@ -37,6 +37,7 @@
 
         <ul>
         <li>Thumbnails of <strong>any</strong> image link are now supported.</li>
+        <li>Thumbnails from Dropbox links are now supported.</li>
         <li>You can now add emojis in your tweets with the <strong>Emoji Panel</strong>! (In composition pane)</li>
         <li>Emojis are now in the party! <img src="https://abs.twimg.com/emoji/v1/72x72/1f389.png" class="twitter-emoji"> <img src="https://abs.twimg.com/emoji/v1/72x72/1f61c.png" class="twitter-emoji"> </li>
         <li>Added support of SoundCloud and Bandcamp for thumbnails/lightboxes</li>
@@ -59,6 +60,7 @@
 
         <ul>
         <li>Les miniatures de <strong>n'importe quelle</strong> image sont désormais supportées.</li>
+        <li>Les miniatures de liens Dropbox sont supportés.</li>
         <li>Vous pouvez désormais ajouter des emojis dans vos tweets en cliquant sur le bouton "Emojis" dans le panneau de composition.</li>
         <li>Les emojis de Twitter sont désormais supportés ! <img src="https://abs.twimg.com/emoji/v1/72x72/1f389.png" class="twitter-emoji"> <img src="https://abs.twimg.com/emoji/v1/72x72/1f61c.png" class="twitter-emoji"> </li>
         <li>Le support de SoundCloud et de Bandcamp a été ajouté pour les miniatures et aperçus</li>
