Updated setting pages with the new stuff

--- a/source/fancy-settings/source/index.html
+++ b/source/fancy-settings/source/index.html
@@ -31,47 +31,39 @@
     <body class="no-select">
         <div class="hidden-changelog en">
         <p>You updated Better TweetDeck to the <b></b> version! Look down to see new features!</p>
-        <b>Changelog for <u>1.4.x</u></b>:
+        <b>Changelog for <u>1.5.x</u></b>:
         <ul>
         <li><strong>Features</strong>:
 
         <ul>
+        <li>There's a "minimal mode" available!</li>
         <li>Thumbnails of <strong>any</strong> image link are now supported.</li>
-        <li>Thumbnails from Dropbox links are now supported.</li>
-        <li>You can now add emojis in your tweets with the <strong>Emoji Panel</strong>! (In composition pane)</li>
-        <li>Emojis are now in the party! <img src="https://abs.twimg.com/emoji/v1/72x72/1f389.png" class="twitter-emoji"> <img src="https://abs.twimg.com/emoji/v1/72x72/1f61c.png" class="twitter-emoji"> </li>
-        <li>Added support of SoundCloud and Bandcamp for thumbnails/lightboxes</li>
         </ul></li>
         <li><strong>Bugfixes &amp; Improvements</strong>:
 
         <ul>
-        <li>Thumbnails should load faster as they are more accurate.</li>
-        <li>The whole extension should be more reliable and less error-prone.</li>
-        <li>Emojis are now (almost?) perfectly supported and shouldn't cause any problem.</li>
-        <li>Stability and performance improvements as minor bugfixes as well</li>
+        <li>The circled avatars are now displayed in the profil modal window</li>
+        <li>Better performance for some functions</li>
+        <li>The new Notifications layout shouldn't be a problem</li>
         </ul></li>
         </ul>
         </div>
         <div class="hidden-changelog fr">
         <p>Better TweetDeck a été mis à jour en version <b></b> ! Voici les changements apportés !</p>
-        <b>Liste de changement pour les versions <u>1.4.0 et plus</u></b>:
+        <b>Liste de changement pour les versions <u>1.5.0 et plus</u></b>:
         <ul>
         <li><strong>Fonctionnalités</strong>:
 
         <ul>
+        <li>Un mode "Minimaliste" est disponible !</li>
         <li>Les miniatures de <strong>n'importe quelle</strong> image sont désormais supportées.</li>
-        <li>Les miniatures de liens Dropbox sont supportés.</li>
-        <li>Vous pouvez désormais ajouter des emojis dans vos tweets en cliquant sur le bouton "Emojis" dans le panneau de composition.</li>
-        <li>Les emojis de Twitter sont désormais supportés ! <img src="https://abs.twimg.com/emoji/v1/72x72/1f389.png" class="twitter-emoji"> <img src="https://abs.twimg.com/emoji/v1/72x72/1f61c.png" class="twitter-emoji"> </li>
-        <li>Le support de SoundCloud et de Bandcamp a été ajouté pour les miniatures et aperçus</li>
         </ul></li>
         <li><strong>Correction de bugs &amp; améliorations</strong>:
 
         <ul>
-        <li>Les miniatures devraient charger plus rapidement et être plus précises.</li>
-        <li>L'extension devrait générer moins d'erreurs.</li>
-        <li>Les emojis sont désormais supportés (presque?) parfaitement.</li>
-        <li>Améliorations des performances et corrections de bug mineurs</li>
+        <li>Les avatars ronds sont affichés dans la fenêtre d'un profil</li>
+        <li>Amélioration du code de certains fonctions</li>
+        <li>Le nouvel affichage des Notifications ne devrait plus poser de problèmes</li>
         </ul></li>
         </ul>
         </div>
