[Meta] Tweaked the "Welcome" box in settings

--- a/source/fancy-settings/source/index.html
+++ b/source/fancy-settings/source/index.html
@@ -72,18 +72,18 @@
             <ul>
                 <li><a href="http://github.com/eramdam/BetterTweetDeck">BetterTweetDeck on GitHub</a></li>
                 <li><a href="http://twitter.com/Eramdam">@Eramdam on Twitter</a></li>
-                <li><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=RRY2KKZLNBJDG">Donate on PayPal</a></li>
-                <li><strong>BTC</strong>: <a href="https://blockchain.info/address/16aWencNCFBtAqnKHj966uSqzQ66RYA87r">16aWencNCFBtAqnKHj966uSqzQ66RYA87r</a></li>
             </ul>
+            <p>Making Better TweetDeck is taking me a lot of time, even if I do this for free, you can help me by making a donation, thanks again!</p>
+            <p class="donate"><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=RRY2KKZLNBJDG" class="btn btn-success">Donate on PayPal</a></p>
         </div>
         <div class="hidden-welcome fr">
-            <p>Merci d'utiliser Better TweetDeck !<br /> Vous pouvez consulter le code source de l'extension, me suivre sur Twitter, ou m'aider à la développer en effectuant un don ! Merci beaucoup !</p>
+            <p>Merci d'utiliser Better TweetDeck !<br /> Vous pouvez consulter le code source de l'extension, me suivre sur Twitter ! Merci beaucoup !</p>
             <ul>
                 <li><a href="http://github.com/eramdam/BetterTweetDeck">BetterTweetDeck sur GitHub</a></li>
                 <li><a href="http://twitter.com/Eramdam">@Eramdam sur Twitter</a></li>
-                <li><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=RRY2KKZLNBJDG">Donner avec PayPal</a></li>
-                <li><strong>BTC</strong> : <a href="https://blockchain.info/address/16aWencNCFBtAqnKHj966uSqzQ66RYA87r">16aWencNCFBtAqnKHj966uSqzQ66RYA87r</a></li>
             </ul>
+            <p>Développer Better TweetDeck prend du temps, bien que je réalise tout ceci gratuitement, si vous trouvez Better TweetDeck utile, vous pouvez effectuer un don de la valeur de votre choix ! Merci !</p>
+            <p class="donate"><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=RRY2KKZLNBJDG" class="btn btn-success">Donner sur PayPal</a></p>
         </div>
         <div id="sidebar" class="fancy">
             <img id="icon" src="" alt=""><h1 id="settings-label"></h1>
