--- a/source/fancy-settings/source/index.html
+++ b/source/fancy-settings/source/index.html
@@ -31,39 +31,41 @@
     <body class="no-select">
         <div class="hidden-changelog en">
         <p>You updated Better TweetDeck to the <b></b> version! Look down to see new features!</p>
-        <b>Changelog for <u>1.5.x</u></b>:
+        <b>Changelog for <u>1.6.x</u></b>:
         <ul>
         <li><strong>Features</strong>:
 
         <ul>
-        <li>There's a "minimal mode" available!</li>
-        <li>Thumbnails of <strong>any</strong> image link are now supported.</li>
+        <li>A button to the Settings page has been added below the Collapse button in TweetDeck</li>
+        <li>TED videos are now supported</li>
+        <li>A preview of display settings is now available in Settings page</li>
+        <li>What if you tried the Konami Code... ?</li>
         </ul></li>
         <li><strong>Bugfixes &amp; Improvements</strong>:
 
         <ul>
-        <li>The circled avatars are now displayed in the profil modal window</li>
-        <li>Better performance for some functions</li>
-        <li>The new Notifications layout shouldn't be a problem</li>
+        <li>The extension doesn't need all the permissions anymore</li>
+        <li>The Settings page has been improved</li>
         </ul></li>
         </ul>
         </div>
         <div class="hidden-changelog fr">
         <p>Better TweetDeck a été mis à jour en version <b></b> ! Voici les changements apportés !</p>
-        <b>Liste de changement pour les versions <u>1.5.0 et plus</u></b>:
+        <b>Liste de changement pour les versions <u>1.6.0 et plus</u></b>:
         <ul>
         <li><strong>Fonctionnalités</strong>:
 
         <ul>
-        <li>Un mode "Minimaliste" est disponible !</li>
-        <li>Les miniatures de <strong>n'importe quelle</strong> image sont désormais supportées.</li>
+        <li>Ajout d'un bouton menant aux réglages de Better TweetDeck à côté du bouton "Collapse" dans la barre latérale de TweetDeck</li>
+        <li>Ajout du support des vidéos de TED.com</li>
+        <li>Un aperçu des options d'affichage est disponible dans les options</li>
+        <li>Et si vous essayiez le Konami Code ... ? </li>
         </ul></li>
         <li><strong>Correction de bugs &amp; améliorations</strong>:
 
         <ul>
-        <li>Les avatars ronds sont affichés dans la fenêtre d'un profil</li>
-        <li>Amélioration du code de certains fonctions</li>
-        <li>Le nouvel affichage des Notifications ne devrait plus poser de problèmes</li>
+        <li>L'extension n'a plus besoin de toutes les autorisations</li>
+        <li>La page des options a été améliorée</li>
         </ul></li>
         </ul>
         </div>
@@ -74,7 +76,7 @@
                 <li><a href="http://twitter.com/Eramdam">@Eramdam on Twitter</a></li>
             </ul>
             <p>Making Better TweetDeck is taking me a lot of time, even if I do this for free, you can help me by making a donation, thanks again!</p>
-            <p class="donate"><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=RRY2KKZLNBJDG" class="btn btn-info">Donate on PayPal</a></p>
+            <p class="donate"><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=RRY2KKZLNBJDG" class="paypal btn btn-success btn-block btn-lg"><img src="img/paypal.png" /> Donate on PayPal</a></p>
         </div>
         <div class="hidden-welcome fr">
             <p>Merci d'utiliser Better TweetDeck !<br /> Vous pouvez consulter le code source de l'extension, me suivre sur Twitter ! Merci beaucoup !</p>
@@ -82,8 +84,8 @@
                 <li><a href="http://github.com/eramdam/BetterTweetDeck">BetterTweetDeck sur GitHub</a></li>
                 <li><a href="http://twitter.com/Eramdam">@Eramdam sur Twitter</a></li>
             </ul>
-            <p>Développer Better TweetDeck prend du temps, bien que je réalise tout ceci gratuitement, si vous trouvez Better TweetDeck utile, vous pouvez effectuer un don de la valeur de votre choix ! Merci !</p>
-            <p class="donate"><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=RRY2KKZLNBJDG" class="btn btn-info">Donner sur PayPal</a></p>
+            <p>Développer Better TweetDeck prend du temps, si vous l'appréciez, prenez le temps de faire un don, j'en serais très reconnaissant ! Merci beaucoup ! <img src="chrome-extension://jpabmnokplnmbpakpmcjabodgpfcknlg/emoji-pngs/emojis-inline/t-1f618.png" class="twitter-emoji"></p>
+            <p class="donate"><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=RRY2KKZLNBJDG" class="paypal btn btn-success btn-block btn-lg"><img src="img/paypal.png" /> Donner sur PayPal</a></p>
         </div>
         <div id="sidebar" class="fancy">
             <img id="icon" src="" alt=""><h1 id="settings-label"></h1>
